<resources>

    <string name="iflytek">5ec5fbe3</string>

    <string name="app_name">澳财经</string>
    <string name="password_digits" translatable="false">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="mailbox_digits" translatable="false">_-.0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ@</string>
    <string name="in_load">加载中&#8230;</string>
    <string name="in_submit">提交中&#8230;</string>
    <string name="in_login">登录中&#8230;</string>
    <string name="in_location">正在定位&#8230;</string>
    <string name="location_fail">定位失败</string>

    <string name="click_to_subscribe">点击订阅频道</string>
    <string name="tip_drag_default">点击进入频道</string>
    <string name="tip_drag">拖动下方按钮排序</string>
    <string name="my_cahnnel">我的频道</string>
    <string name="other_channel">订阅频道</string>
    <string name="customize_channel">我的自定义频道</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="release_agreement">若提交您的信息，则您承认您已阅读并同意《澳洲财经APP信息发布协议》并同意以上文方式使用您的信息</string>


    <string name="xinwen">新闻</string>
    <string name="caifu">财富</string>
    <string name="gerenzxin">个人中心</string>
    <string name="shousuohint">搜索感兴趣的内容</string>
    <string name="login_hint">登录后，接收新闻推荐，一键发帖更方便</string>
    <string name="lonin_text">登录</string>
    <string name="gupiao">股票</string>
    <string name="jijin">基金</string>
    <string name="huilv">汇率</string>
    <string name="budongcan">不动产</string>
    <string name="shengyi">生意</string>
    <string name="wode">我的</string>
    <string name="zuixindongtai">最新动态</string>
    <string name="dianjidenglu">点击登录</string>
    <string name="mymessage">我的消息</string>
    <string name="mycritic">我的评论</string>
    <string name="mycollect">我的收藏</string>
    <string name="pushrecord">推送记录</string>
    <string name="browsinghistory">浏览历史</string>
    <string name="Remindernotices">提醒通知</string>
    <string name="receivenews_close">(接收新闻推送已关闭)</string>
    <string name="receivenews_open">(接收新闻推送已开启)</string>
    <string name="feedback">意见反馈</string>

    <string name="gonggao">公告</string>
    <string name="sixin">私信</string>

    <string name="zuiduotianjia">添加图片，最多9张</string>

    <string name="mianji">面积</string>

    <string name="youxiangdd">邮箱</string>

    <string name="qingtinaie">详细介绍</string>

    <string name="pingfngmi">平方米</string>

    <string name="zhojie">中介名称</string>

    <string name="dizih">地址</string>

    <string name="language">语言设置</string>

    <string name="shuaxin">刷新</string>

    <string name="zanwushuyu">暂无数据</string>

    <string name="clearcache">清除缓存</string>
    <string name="grade">为我评分</string>
    <string name="AboutUs">关于我们</string>
    <string name="save">保存</string>
    <string name="personaldata">个人资料</string>
    <string name="headportrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="dateofbirth">出生日期</string>
    <string name="cellphone">手机号码</string>
    <string name="binding">未绑定</string>
    <string name="mailbox">邮箱</string>
    <string name="signature">签名</string>
    <string name="nosignature">未填写签名</string>

    <string name="logout">退出登录</string>

    <string name="choose">请选择</string>


    <string name="quxiao">取消</string>

    <string name="yuyansez">语言设置</string>


    <string name="jintizhengwen">简体中文</string>

    <string name="yingwen">English</string>

    <string name="nan">男</string>

    <string name="nv">女</string>

    <string name="shoujihao">手机号</string>

    <string name="qubangding">去绑定</string>

    <string name="shangwuhezuo">商务合作</string>

    <string name="lianxiwom">联系我们</string>

    <string name="mianzshengming">免责声明</string>

    <string name="jiaruwom">加入我们</string>

    <string name="wodefabu">我的发布</string>

    <string name="wodezuj">我的足迹</string>

    <string name="mingmin">民用</string>

    <string name="tudi">土地</string>

    <string name="shnegye">商业</string>

    <string name="nongc">农场</string>

    <string name="shengri">生日</string>

    <string name="queding">确定</string>

    <string name="wenxin">温馨提示</string>

    <string name="quedingtc">是否确认退出登录</string>

    <string name="queren">确认</string>

    <string name="shoujihaidl">手机号登录</string>

    <string name="diqu">国家/地区</string>

    <string name="zuce">注册</string>

    <string name="shurushoujihao">请输入手机号</string>

    <string name="mima">密码</string>

    <string name="shurumim">请输入密码</string>

    <string name="wngjimima">忘记密码</string>

    <string name="youxiang">邮箱登录</string>

    <string name="aodayia">澳大利亚</string>

    <string name="zhongguo">中国大陆</string>

    <string name="tiwan">中国台湾</string>

    <string name="xianggang">中国香港</string>

    <string name="aomen">中国澳门</string>

    <string name="xinxilan">新西兰</string>

    <string name="xunzdiz">选择国家和地区</string>

    <string name="tijiao">提交</string>

    <string name="hinyijian">提出您宝贵的意见</string>

    <string name="guangli">管理</string>

    <string name="qingkong">清空</string>

    <string name="shanchu">删除</string>

    <string name="mingc">名称</string>

    <string name="jingz">净值</string>

    <string name="zzl">增长率</string>

    <string name="fenlibiti">分类信息标题</string>

    <string name="biaoti">标题</string>

    <string name="xianfgxingxinxi">详细信息</string>

    <string name="jiage">价格</string>

    <string name="leixing">类型</string>

    <string name="chengshi">城市</string>

    <string name="xianqidiz">详细地址</string>

    <string name="xiaoshoumim">销售名字</string>

    <string name="liuxialianxi">留下您的联系方式</string>

    <string name="xianghdianhu">销售电话</string>

    <string name="xiaoshouyoujin">销售邮箱</string>

    <string name="wuyezhangtai">物业状态</string>

    <string name="qingtianxie">请填写</string>

    <string name="qingshur">请输入</string>

    <string name="fabu">发布</string>

    <string name="zanwushuju">暂无数据</string>

    <string name="shjuzhengzaoshaxn">正在刷新数据中</string>

    <string name="jintian">今天</string>

    <string name="shengfen">身份</string>

    <string name="geren">个人</string>

    <string name="fuwulixing">服务类型</string>

    <string name="suoss">所属行业</string>

    <string name="gongsiminc">公司名称</string>

    <string name="gongsidiz">公司地址</string>

    <string name="miaosu">描述</string>

    <string name="lianxifansghi">联系方式</string>

    <string name="weixn">微信</string>

    <string name="gengxinyu">更新于</string>

    <string name="querenmima">确认密码</string>

    <string name="yanzma">验证码</string>

    <string name="youxiangzhuc">邮箱注册</string>

    <string name="huoquyaz">获取验证码</string>

    <string name="shoujihaizhuc">手机号注册</string>

    <string name="yonghuxieyi">用户协议</string>

    <string name="sousuo">搜索</string>

    <string name="shousuolishi">搜索历史</string>

    <string name="zidingyipindao">+自定义频道</string>

    <string name="pindaoguanli">频道管理</string>

    <string name="fabushengyi">发布生意</string>

    <string name="minayi">面议请填0</string>

    <string name="lianxiren">联系人</string>

    <string name="mimyi">面议</string>

    <string name="jinrihuilv">今日汇率</string>

    <string name="zhinengshuzi">只能设置英文跟数字</string>

    <string name="shifouqureren">是否确认清除缓存?</string>

    <string name="wodedingyue">我的订阅</string>


    <string name="xieyi">\t\t本协议是澳财经APP及网站（以下简称“本APP”或“我们”）与用户服务使用人（以下简称“用户”或“您”）所达成的协议。为使用本APP的服务，您应当阅读并遵守本《用户服务协议》（以下简称“本协议”）。在您成为本APP的用户以前，请务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款、管辖与法律适用条款，以及开通或使用某项服务的单独协议。限制、免责条款可能以黑体加粗或加下划线的形式提示您重点注意。

您使用本APP的服务即视为您已仔细阅读并充分了解前述协议的内容，并同意接受上述协议的约束。除非您已阅读并接受本协议所有条款，否则您无权使用本APP服务。\n  \n

如果您未满18周岁，请在法定监护人的陪同下阅读本协议，并特别注意未成年人使用条款。\n \n

一、用户注册信息\n\n

只有注册用户才能使用本APP的订阅发布相关服务。在注册时，本APP会要求您提供您的手机号、用户名、头像及密码。用户名及头像须符合中华人民共和国法律相关规定。本APP不会对您提供的上述信息进行事实审核，如果您提供的信息错误或者不准确，由此产生的责任由您自行承担。\n \n

二、信息安全\n \n

请了解，在未经您同意及确认之前，本APP不会将您的注册信息、第三方支付信息用于其它目的，或向其他方面透露。仅当政府机关依照法定程序要求本APP提供您的相关信息时，本APP将根据执法单位之要求或为公共安全之目的向其提供。在此情况下之任何披露，本APP均得免责。\n \n

本APP将对您所提供的信息进行严格的管理及保护，本APP将使用相应的技术，防止您的个人信息丢失、被盗用或遭篡改。但因计算机系统和网络技术的限制，本APP可能会因受到第三方的攻击或破坏，导致用户的个人信息被恶意篡改、盗取或泄露，本APP将采取合理措施防止类似事件的发生，并将配合国家机关和第三方对类似事件进行调查或提起必要的行动（包括但不限于诉讼等）。对于非因本APP过错原因而导致的信息安全问题，您同意给予谅解并豁免本APP可能承担的任何责任。\n \n

三、免责\n \n

如发生下列情况，造成用户损失，本APP不需承担任何责任：\n \n

不可抗力或意外事件等风险因素，导致本APP服务发生中断。\n \n
由于您将用户密码告知他人或与他人共享注册账户，或者您操作不当而导致的任何损失；\n \n
任何由于计算机问题、黑客攻击、计算机病毒侵入或发作、因政府管制而造成的暂时性关闭等影响网络正常经营之不可抗力而造成的损失或个人信息泄露、丢失、被盗用或被篡改等；\n \n
用户或的电脑软件、系统、硬件和通信线路出现故障；\n \n
本APP的页面上有与其他网站网页的链接，包括页面上的广告。本APP对其他任何网站的内容、隐私政策或运营，或经营这些网站的公司的行为概不负责。在向这些网与本APP链接的其他网站提供个人信息以前，请查阅它们的隐私政策。\n \n
用户通过非本APP授权的方式使用本服务；\n \n
由于与本APP链接的其它网站所造成之个人资料泄露及由此而导致的任何法律争议。 \n \n
由于用户使用第三方服务而导致的损失或产生的任何争议。其他本APP无法控制或合理预见的情形。 \n \n
您理解并同意，在使用本服务的过程中，可能会遇到网络信息或其他用户行为带来的风险，本APP不对任何网络信息或其他用户行为的真实性、适用性、合法性承担责任，也不对因网络信息或其他用户侵权行为给您造成的损害负责。 \n \n

四、第三方服务\n \n

您在本APP平台上使用第三方提供的产品或服务时，除遵守本协议约定外，还应遵守第三方的用户协议。 \n \n

您已知悉并了解，本APP平台上所链接或嵌入的第三方服务并非本APP提供，如果您对第三方服务有异议，可以直接与第三方联系，也可以向本APP反馈。本APP将协助您联系第三方并转达您的需求和意见。\n \n

您确认并同意，在您使用第三方服务时，除非适用法律有明确规定，您和第三方的纠纷应由您和第三方解决。根据适用法律的规定，本APP需要承担责任的，本APP和第三方对可能出现的纠纷在法律规定和约定的范围内各自承担责任。\n \n

五、协议的生效与变更\n \n

您使用本APP的服务即视为您已阅读本协议并接受本协议的约束。\n \n
本APP有权在必要时修改本协议条款。您可以在相关服务页面查阅最新版本的协议条款。\n \n
本协议条款变更后，如果您继续使用本APP提供的软件或服务，即视为您已接受修改后的协议。如果您不接受修改后的协议，应当停止使用本APP提供的软件或服务。\n \n

六、服务的变更\n \n

本APP可能会对服务内容进行变更，也可能会中断、中止或终止服务。您理解并同意，本APP有权自主决定经营策略。\n \n

在本APP发生合并、分立、收购、资产转让时，本APP可向第三方转让本服务下相关资产；本APP也可在单方通知您后，将本协议下部分或全部服务转交由第三方运营或履行。具体受让主体以本APP通知的为准。\n </string>




    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>
