<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.ruanyun.australianews.widget.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:topBarTitleText="@string/feedback" />

    <EditText
        android:id="@+id/et_select_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_size_px_50"
        android:layout_marginTop="@dimen/text_size_px_80"
        android:layout_marginRight="@dimen/text_size_px_50"
        android:background="@drawable/corners_stroke_gray_2dp_shape"
        android:gravity="start"
        android:hint="@string/liuxialianxi"
        android:inputType="phone"
        android:maxLength="20"
        android:textColor="@color/text_black"
        android:textColorHint="@color/text_gray"
        android:textSize="@dimen/text_size_sp_14" />

    <EditText
        android:id="@+id/et_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_size_px_50"
        android:layout_marginTop="@dimen/text_size_px_24"
        android:layout_marginRight="@dimen/text_size_px_50"
        android:background="@drawable/corners_stroke_gray_2dp_shape"
        android:gravity="start"
        android:hint="@string/hinyijian"
        android:minLines="6"
        android:maxLength="200"
        android:textColor="@color/text_black"
        android:textColorHint="@color/text_gray"
        android:textSize="@dimen/text_size_sp_14" />

    <com.ruanyun.imagepicker.widget.RYAddPictureView
        android:id="@+id/ryPicView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="@dimen/text_size_px_96"
        android:verticalSpacing="@dimen/text_size_px_30"
        android:numColumns="3"
        android:padding="@dimen/text_size_px_50"  />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_px_122"
        android:layout_marginLeft="@dimen/text_size_px_50"
        android:layout_marginTop="@dimen/text_size_px_40"
        android:layout_marginRight="@dimen/text_size_px_50"
        android:background="@drawable/corners_registered_bg_shape"
        android:gravity="center"
        android:text="@string/tijiao"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_sp_16" />

</LinearLayout>