<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.ruanyun.australianews.widget.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:topBarTitleText="@string/AboutUs" />

    <TextView
        android:id="@+id/tv_gywm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_px_147"
        android:text="@string/AboutUs"
        android:textColor="@color/text_color_666"
        android:paddingLeft="@dimen/text_size_px_43"
        android:paddingRight="@dimen/text_size_px_43"
        android:drawableRight="@drawable/icon_arrow_right"
        android:gravity="center_vertical"/>

    <View style="@style/DividerHorizontal"
        android:layout_marginLeft="@dimen/text_size_px_43"/>

    <TextView
        android:id="@+id/tv_swhz"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_px_147"
        android:text="@string/shangwuhezuo"
        android:textColor="@color/text_color_666"
        android:paddingLeft="@dimen/text_size_px_43"
        android:paddingRight="@dimen/text_size_px_43"
        android:drawableRight="@drawable/icon_arrow_right"
        android:gravity="center_vertical"/>

    <View style="@style/DividerHorizontal"
        android:layout_marginLeft="@dimen/text_size_px_43"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_tbmx"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_px_147"
        android:text="特别鸣谢"
        android:textColor="@color/text_color_666"
        android:paddingLeft="@dimen/text_size_px_43"
        android:paddingRight="@dimen/text_size_px_43"
        android:drawableRight="@drawable/icon_arrow_right"
        android:gravity="center_vertical"
        android:visibility="gone"
        />

    <View style="@style/DividerHorizontal"
        android:layout_marginLeft="@dimen/text_size_px_43"/>

    <TextView
        android:id="@+id/tv_lxwm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_px_147"
        android:text="@string/lianxiwom"
        android:textColor="@color/text_color_666"
        android:paddingLeft="@dimen/text_size_px_43"
        android:paddingRight="@dimen/text_size_px_43"
        android:drawableRight="@drawable/icon_arrow_right"
        android:gravity="center_vertical"/>

    <View style="@style/DividerHorizontal"
        android:layout_marginLeft="@dimen/text_size_px_43"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_jrwm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_px_147"
        android:text="@string/jiaruwom"
        android:textColor="@color/text_color_666"
        android:paddingLeft="@dimen/text_size_px_43"
        android:paddingRight="@dimen/text_size_px_43"
        android:drawableRight="@drawable/icon_arrow_right"
        android:gravity="center_vertical"
        android:visibility="gone"
        />

    <View style="@style/DividerHorizontal"
        android:layout_marginLeft="@dimen/text_size_px_43"/>

    <TextView
        android:id="@+id/tv_mzsm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_px_147"
        android:text="@string/mianzshengming"
        android:textColor="@color/text_color_666"
        android:paddingLeft="@dimen/text_size_px_43"
        android:paddingRight="@dimen/text_size_px_43"
        android:drawableRight="@drawable/icon_arrow_right"
        android:gravity="center_vertical"/>

    <View style="@style/DividerHorizontal"
        android:layout_marginLeft="@dimen/text_size_px_43"/>

</LinearLayout>