<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.ruanyun.australianews.widget.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:topBarTitleText="基金"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_px_80"
        android:background="#EBF3FA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/mingc"
            android:textColor="@color/text_color_666"
            android:paddingLeft="@dimen/text_size_px_31"
            android:textSize="@dimen/text_size_sp_12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:text="@string/jingz"
            android:layout_marginRight="@dimen/text_size_px_350"
            android:textColor="@color/text_color_666"
            android:textSize="@dimen/text_size_sp_12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:text="@string/zzl"
            android:layout_marginRight="@dimen/text_size_px_40"
            android:textColor="@color/text_color_666"
            android:textSize="@dimen/text_size_sp_12"/>

    </FrameLayout>

    <fragment
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.ruanyun.australianews.ui.wealth.WealthFundListFragment"/>

</LinearLayout>