<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

<!--        <RelativeLayout-->
<!--            android:id="@+id/tv_quxiao"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="match_parent"-->
<!--            >-->
            <TextView
                android:id="@+id/tv_quxiao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/color_black_333333"
                android:text="@string/quxiao"
                android:layout_marginLeft="16dp"
                android:layout_centerVertical="true"
                />

<!--        </RelativeLayout>-->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/color_black_333333"
            android:text="@string/yuyansez"
            android:layout_marginLeft="16dp"
            android:layout_centerInParent="true"
            />

<!--        <RelativeLayout-->
<!--            android:id="@+id/tv_wancheng"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_alignParentRight="true"-->
<!--            >-->
            <TextView
                android:id="@+id/tv_wancheng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="#2F5F8B"
                android:text="@string/finish"
                android:layout_marginRight="16dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                />

<!--        </RelativeLayout>-->



    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EDEDED"
        />


    <RelativeLayout
        android:id="@+id/tv_zhongwen"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_666"
            android:text="@string/jintizhengwen"
            android:textSize="16dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            />

        <ImageView
            android:id="@+id/image_zh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/duigou"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="33dp"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EDEDED"
        android:layout_marginLeft="16dp"
        />

    <RelativeLayout
        android:id="@+id/tv_yingwen"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_666"
            android:text="@string/yingwen"
            android:textSize="16dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            />

        <ImageView
            android:id="@+id/image_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/duigou"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="33dp"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDEDED"
        />


</LinearLayout>