<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.ruanyun.australianews.widget.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:topBarRightImageEnable="true"
        app:topBarRightText="@string/fabu"
        app:topBarTitleText="@string/mingmin"
        app:topBarRightTextEnable="true"
        app:topBarRightTextColor="@color/theme_color"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:id="@+id/rl_juminlou"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/mingmin"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                />

            <View
                android:id="@+id/v_jumin"
                android:layout_width="34dp"
                android:layout_height="2dp"
                android:layout_centerHorizontal="true"
                android:background="@color/theme_color"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_minshangyongdi"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tudi"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                />

            <View
                android:id="@+id/v_minsheng"
                android:layout_width="34dp"
                android:layout_height="2dp"
                android:layout_centerHorizontal="true"
                android:background="@color/theme_color"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_shangyeyongdi"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/shnegye"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                />

            <View
                android:id="@+id/v_shangye"
                android:layout_width="34dp"
                android:layout_height="2dp"
                android:layout_centerHorizontal="true"
                android:background="@color/theme_color"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_nongchang"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nongc"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                />

            <View
                android:id="@+id/v_nongc"
                android:layout_width="34dp"
                android:layout_height="2dp"
                android:layout_centerHorizontal="true"
                android:background="@color/theme_color"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>